--- a/index.html
+++ b/index.html
@@ -1,44 +1,105 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
-  <title>Frontend Mentor | E-commerce product page</title>
+    <title>Frontend Mentor | E-commerce product page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Collections
-  Men
-  Women
-  About
-  Contact
-
-  Sneaker Company
-
-  Fall Limited Edition Sneakers
-
-  These low-profile sneakers are your perfect casual wear companion. Featuring a
-  durable rubber outer sole, they’ll withstand everything the weather can offer.
-
-  $125.00
-  50%
-  $250.00
-
-  0
-  Add to cart
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <div class="mobile-header">
+        <div class="header-group-1">
+          <img src="#" alt="open-menu icon image" />
+          <img src="#" alt="website logo" />
+        </div>
+        <div class="header-group-2">
+          <img src="#" alt="cart icon image" />
+          <img src="#" alt="profile avatar" />
+        </div>
+      </div>
+      <div class="desktop-header" style="display: none">
+        <!-- Add a border-bottom style to this header -->
+        <div class="header-group-1">
+          <img src="#" alt="website logo" />
+          <nav>
+            <ul>
+              <li><a>Collections</a></li>
+              <li><a>Men</a></li>
+              <li><a>Women</a></li>
+              <li><a>About</a></li>
+              <li><a>Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="header-group-2">
+          <img src="#" alt="cart icon image" />
+          <img src="#" alt="profile avatar" />
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="container">
+        <div class="mobile-background-image-container">
+          <img src="#" alt="previous icon image" />
+          <img src="#" alt="next icon image" />
+        </div>
+        <div class="desktop-background-container">
+          <div class="desktop-background-image-container"></div>
+          <div class="desktop-products-container">
+            <img src="#" alt="product-1" />
+            <img src="#" alt="product-2" />
+            <img src="#" alt="product-3" />
+            <img src="#" alt="product-4" />
+          </div>
+        </div>
+        <div class="product-info-container">
+          <div class="product-details">
+            <p>Sneaker Company</p>
+            <h1>Fall Limited Edition Sneakers</h1>
+            <p>
+              These low-profile sneakers are your perfect casual wear companion. Featuring a durable rubber outer sole,
+              they’ll withstand everything the weather can offer.
+            </p>
+          </div>
+          <div class="product-price-container">
+            <p>$125.00 <span>50%</span></p>
+            <p>$250.00</p>
+          </div>
+          <div class="product-checkout-container">
+            <div class="buttons container">
+              <img src="#" alt="minus icon image" role="button" />
+              <span>0</span>
+              <img src="#" alt="plus icon image" role="button" />
+            </div>
+            <button>
+              <img src="images/icon-cart.svg" alt="cart-icon" />
+              <span>Add to cart</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"><b>Frontend Mentor</b></a
+        >. Coded by <a href="https://github.com/Tonye-Onuoha"><b>Tonye Hugo Onuoha</b></a
+        >.
+      </div>
+    </footer>
+  </body>
 </html>
