--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <!-- displays site properly based on user's device -->
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <!-- custom CSS link -->
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
 
     <title>Frontend Mentor | E-commerce product page</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
         font-size: 11px;
