--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         font-style: normal;
         font-variation-settings: "YOPQ" 300;
         text-align: center;
-        margin-top: 20px;
+        margin-top: 100px;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
@@ -43,10 +43,10 @@
           <img src="images/image-avatar.png" alt="profile avatar" />
         </div>
       </div>
-      <div class="desktop-header" style="display: none">
+      <div class="desktop-header">
         <!-- Add a border-bottom style to this header -->
         <div class="header-group-1">
-          <img src="#" alt="website logo" />
+          <img src="images/logo.svg" alt="website logo" />
           <nav>
             <ul>
               <li><a>Collections</a></li>
@@ -58,8 +58,8 @@
           </nav>
         </div>
         <div class="header-group-2">
-          <img src="#" alt="cart icon image" />
-          <img src="#" alt="profile avatar" />
+          <img src="images/icon-cart.svg" alt="cart icon image" />
+          <img src="images/image-avatar.png" alt="profile avatar" />
         </div>
       </div>
     </header>
@@ -69,13 +69,13 @@
           <img src="images/icon-previous.svg" alt="previous icon image" />
           <img src="images/icon-next.svg" alt="next icon image" />
         </div>
-        <div class="desktop-background-container" style="display: none">
+        <div class="desktop-background-container">
           <div class="desktop-background-image-container"></div>
           <div class="desktop-products-container">
-            <img src="#" alt="product-1" />
-            <img src="#" alt="product-2" />
-            <img src="#" alt="product-3" />
-            <img src="#" alt="product-4" />
+            <img src="images/image-product-1-thumbnail.jpg" alt="product-1" />
+            <img src="images/image-product-2-thumbnail.jpg" alt="product-2" />
+            <img src="images/image-product-3-thumbnail.jpg" alt="product-3" />
+            <img src="images/image-product-4-thumbnail.jpg" alt="product-4" />
           </div>
         </div>
         <div class="product-info-container">
@@ -141,6 +141,38 @@
             <img src="images/icon-delete.svg" alt="delete icon image" />
           </div>
           <button class="checkout-button">Checkout</button>
+        </div>
+      </div>
+      <!-- DESKTOP CART SECTION -->
+      <div class="desktop-cart" style="display: none">
+        <div class="cart-header"><p>Cart</p></div>
+        <div class="cart-item-container">
+          <div class="cart-item-info">
+            <img src="images/image-product-1-thumbnail.jpg" alt="cart item thumbnail" />
+            <div class="cart-item">
+              <p class="item-name">Fall Limited Edition Sneakers</p>
+              <p class="item-cost">$125.00 x 3 <span>$375.00</span></p>
+            </div>
+            <img src="images/icon-delete.svg" alt="delete icon image" />
+          </div>
+          <button class="checkout-button">Checkout</button>
+        </div>
+      </div>
+      <!-- DESKTOP LIGHTBOX SECTION -->
+      <div class="desktop-overlay" style="display: none"></div>
+      <div class="lightbox-container" style="display: none">
+        <div class="close-icon-container">
+          <img src="images/icon-close-lightbox.svg" alt="menu-close icon" role="button" />
+        </div>
+        <div class="lightbox-background-image-container">
+          <img src="images/icon-previous.svg" alt="previous icon image" />
+          <img src="images/icon-next.svg" alt="next icon image" />
+        </div>
+        <div class="lightbox-products-container">
+          <img src="images/image-product-1-thumbnail.jpg" alt="product-1" />
+          <img src="images/image-product-2-thumbnail.jpg" alt="product-2" />
+          <img src="images/image-product-3-thumbnail.jpg" alt="product-3" />
+          <img src="images/image-product-4-thumbnail.jpg" alt="product-4" />
         </div>
       </div>
     </main>
