Updated README file

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
           <div class="product-checkout-container">
             <div class="buttons-container">
               <div class="image-container">
-                <img src="images/icon-minus.svg" alt="minus icon image" role="button" />
+                <img src="images/icon-minus.svg" alt="minus icon image" role="button" tabindex="0" />
               </div>
               <span id="item-count">0</span>
               <div class="image-container">
-                <img src="images/icon-plus.svg" alt="plus icon image" role="button" />
+                <img src="images/icon-plus.svg" alt="plus icon image" role="button" tabindex="0" />
               </div>
             </div>
             <button>
